Added logger, testing to do

--- a/BuyerApp/config.properties
+++ b/BuyerApp/config.properties
@@ -3,3 +3,5 @@ LOGIN_REST=http://localhost:8080/Factory/api/login/
 REGISTER_REST=http://localhost:8080/Factory/api/register/
 MULTICAST_PORT=20000
 HOST=224.0.0.11
+QUEUE_NAME=order
+LOGGER_PATH=./log/logger.log
