--- a/FactoryApp/config.properties
+++ b/FactoryApp/config.properties
@@ -4,3 +4,9 @@ KEYSTORE_PASSWORD=sigurnost
 REGISTER_REST=http://localhost:8080/Factory/api/register/
 MULTICAST_PORT=20000
 HOST=224.0.0.11
+PROTOCOL_OK_MESSAGE=OK
+PROTOCOL_NOT_OK_MESSAGE=NOT_OK
+PROTOCOL_LOGIN_MESSAGE=LOGIN
+PROTOCOL_GEN_INFO_MESSAGE=GEN_INFO
+QUEUE_NAME=order
+LOGGER_PATH=./log/logger.log
